@@ -17,6 +17,7 @@ Revision 0.2.6, released XX-05-2019
 - Added RFC4073 providing Multiple Contents protection with CMS
 - Added RFC2634 providing Enhanced Security Services for S/MIME
 - Added RFC5915 providing Elliptic Curve Private Key
+- Added RFC5940 providing CMS Revocation Information Choices
 
 Revision 0.2.5, released 24-04-2019
 -----------------------------------
